<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
    <device id="retina6_1" orientation="portrait" appearance="light"/>
    <dependencies>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="System colors in document resources" minToolsVersion="11.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--View Controller-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="RetirementCalculator" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Monthly investments" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="5Qo-72-AU8">
                                <rect key="frame" x="20" y="44" width="374" height="34"/>
                                <accessibility key="accessibilityConfiguration" identifier="monthly_investments"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Your current age" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="8OK-fX-bdq">
                                <rect key="frame" x="20" y="86" width="374" height="34"/>
                                <accessibility key="accessibilityConfiguration" identifier="current_age"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Your planned retirement age" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="jPi-lv-aMY">
                                <rect key="frame" x="20" y="128" width="374" height="34"/>
                                <accessibility key="accessibilityConfiguration" identifier="retirement_age"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Average interest rate of investments" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="BQd-7O-UYR">
                                <rect key="frame" x="20" y="170" width="374" height="34"/>
                                <accessibility key="accessibilityConfiguration" identifier="interest_rate"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Current savings" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Qxe-tv-C5h">
                                <rect key="frame" x="20" y="212" width="374" height="34"/>
                                <accessibility key="accessibilityConfiguration" identifier="savings"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Psh-b4-Rmw">
                                <rect key="frame" x="20" y="254" width="374" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="calculate_retirement"/>
                                <state key="normal" title="Calculate retirement amount"/>
                                <connections>
                                    <action selector="calculateButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="6ag-8g-acQ"/>
                                </connections>
                            </button>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Enter some values to calculate your retirement amount." textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9tN-PO-Cqb">
                                <rect key="frame" x="20" y="292" width="374" height="41"/>
                                <accessibility key="accessibilityConfiguration" identifier="result_label"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                        <constraints>
                            <constraint firstItem="BQd-7O-UYR" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="0Ws-3d-VP3"/>
                            <constraint firstItem="Qxe-tv-C5h" firstAttribute="top" secondItem="BQd-7O-UYR" secondAttribute="bottom" constant="8" symbolic="YES" id="3vA-4I-Xcr"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="9tN-PO-Cqb" secondAttribute="trailing" constant="20" id="45a-ht-EHN"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Psh-b4-Rmw" secondAttribute="trailing" constant="20" id="8Id-ed-ie7"/>
                            <constraint firstItem="9tN-PO-Cqb" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="BU6-vr-6SJ"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="8OK-fX-bdq" secondAttribute="trailing" constant="20" id="C7C-IY-RNU"/>
                            <constraint firstItem="Qxe-tv-C5h" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="DmI-H1-ebY"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="5Qo-72-AU8" secondAttribute="trailing" constant="20" id="G4I-MV-wzO"/>
                            <constraint firstItem="5Qo-72-AU8" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="GDJ-x3-dSk"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="jPi-lv-aMY" secondAttribute="trailing" constant="20" id="Hyc-pC-2ug"/>
                            <constraint firstItem="BQd-7O-UYR" firstAttribute="top" secondItem="jPi-lv-aMY" secondAttribute="bottom" constant="8" symbolic="YES" id="MAT-1q-79g"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Qxe-tv-C5h" secondAttribute="trailing" constant="20" id="OjE-uw-A1D"/>
                            <constraint firstItem="5Qo-72-AU8" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="UgT-mD-gtN"/>
                            <constraint firstItem="jPi-lv-aMY" firstAttribute="top" secondItem="8OK-fX-bdq" secondAttribute="bottom" constant="8" symbolic="YES" id="WUr-6o-NyT"/>
                            <constraint firstItem="9tN-PO-Cqb" firstAttribute="top" secondItem="Psh-b4-Rmw" secondAttribute="bottom" constant="8" symbolic="YES" id="Wfy-8l-416"/>
                            <constraint firstItem="Psh-b4-Rmw" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="mcJ-B7-Gm5"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="BQd-7O-UYR" secondAttribute="trailing" constant="20" id="nKJ-Dw-Eb8"/>
                            <constraint firstItem="8OK-fX-bdq" firstAttribute="top" secondItem="5Qo-72-AU8" secondAttribute="bottom" constant="8" symbolic="YES" id="oek-DZ-SDy"/>
                            <constraint firstItem="8OK-fX-bdq" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="pq5-bY-u2o"/>
                            <constraint firstItem="Psh-b4-Rmw" firstAttribute="top" secondItem="Qxe-tv-C5h" secondAttribute="bottom" constant="8" symbolic="YES" id="vLL-gM-pTa"/>
                            <constraint firstItem="jPi-lv-aMY" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="zwX-F4-0ty"/>
                        </constraints>
                    </view>
                    <connections>
                        <outlet property="ageTextField" destination="8OK-fX-bdq" id="rbe-dB-9TE"/>
                        <outlet property="interestRateTextField" destination="BQd-7O-UYR" id="UOi-ud-63c"/>
                        <outlet property="monthlyInvestmentsTextField" destination="5Qo-72-AU8" id="3nl-vC-fdX"/>
                        <outlet property="resultLabel" destination="9tN-PO-Cqb" id="QvV-Fk-2Ej"/>
                        <outlet property="retirementAgeTextField" destination="jPi-lv-aMY" id="fnH-ni-LtE"/>
                        <outlet property="savingsTextFields" destination="Qxe-tv-C5h" id="Qcp-rj-dPf"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="137.68115942028987" y="118.52678571428571"/>
        </scene>
    </scenes>
    <resources>
        <systemColor name="systemBackgroundColor">
            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
        </systemColor>
    </resources>
</document>
